#PK-412 Adjust line height of default privacy policy content

--- a/src/Kooco.Pikachu.Blazor/Pages/TenantManagement/TenantSettings.razor
+++ b/src/Kooco.Pikachu.Blazor/Pages/TenantManagement/TenantSettings.razor
@@ -235,7 +235,7 @@
                                                        Clicked="SetDefaultPrivacyPolicy"
                                                        Disabled="ViewMode">@L["DefaultPrivacyPolicy"]</PikachuButton>
                                     </Div>
-                                    <BlazoredTextEditor @ref="@PrivacyPolicyHtml">
+                                    <BlazoredTextEditor ReadOnly="true" @ref="@PrivacyPolicyHtml">
                                         <ToolbarContent>
                                             <select class="ql-header">
                                                 <option selected=""></option>
