--- a/src/Kooco.Pikachu.Blazor/Pages/ItemManagement/EditItem.razor
+++ b/src/Kooco.Pikachu.Blazor/Pages/ItemManagement/EditItem.razor
@@ -34,20 +34,24 @@
             <div class="col-2">
                 <label>@L["ItemName"]</label>
             </div>
-            <div class="col-9">
-                <TextEdit @bind-Text="@UpdateItemDto.ItemName" MaxLength="@MaxTextCount" />
-            </div>
-            <div class="col-1">
-                <span>
-                    @(string.IsNullOrWhiteSpace(UpdateItemDto.ItemName) ? 60 : (MaxTextCount - UpdateItemDto.ItemName.Count()))/@MaxTextCount
-                </span>
+            <div class="col-10">
+                <Addons>
+                    <Addon AddonType="AddonType.Body">
+                        <TextEdit @bind-Text="@UpdateItemDto.ItemName" MaxLength="@MaxTextCount" />
+                    </Addon>
+                    <Addon AddonType="AddonType.End">
+                        <AddonLabel Style="background-color: #f5f5f7">
+                            @(string.IsNullOrWhiteSpace(UpdateItemDto.ItemName) ? 60 : (MaxTextCount - UpdateItemDto.ItemName.Count()))/@MaxTextCount
+                        </AddonLabel>
+                    </Addon>
+                </Addons>
             </div>
         </div>
         <div class="row">
             <div class="col-2">
                 <label>@L["ItemImage"]</label>
             </div>
-            <div class="col-10 row">
+            <div class="col-10">
                 <Field>
                     <FilePicker @ref="FilePickerCustom"
                                         Multiple
@@ -124,16 +128,24 @@
             </div>
         }
 
-        <div class=" row">
+        <div class="row">
             <div class="col-2">
                 <fieldLabel>@L["ItemDescription"]</fieldLabel>
             </div>
-            <div class="col-9">
+            <div class="col-10">
                 <div class="col-12">
-                    <fieldLabel></fieldLabel>
-                    <TextEdit Placeholder="@L["ItemDescriptionTitle"]" @bind-Text="@UpdateItemDto.ItemDescriptionTitle" />
+                    <Addons>
+                        <Addon AddonType="AddonType.Body">
+                            <TextEdit Placeholder="@L["ItemDescriptionTitle"]" @bind-Text="@UpdateItemDto.ItemDescriptionTitle" />
+                        </Addon>
+                        <Addon AddonType="AddonType.End">
+                            <AddonLabel Style="background-color: #f5f5f7">
+                                @(string.IsNullOrWhiteSpace(UpdateItemDto.ItemDescriptionTitle) ? 60 : (MaxTextCount - UpdateItemDto.ItemDescriptionTitle.Count()))/@MaxTextCount
+                            </AddonLabel>
+                        </Addon>
+                    </Addons>
                 </div>
-                <div class=" col-12">
+                <div class="col-12">
                     <Blazored.TextEditor.BlazoredTextEditor @ref="@QuillHtml">
                         <ToolbarContent>
                             <select class="ql-header">
@@ -170,11 +182,6 @@
                         </ToolbarContent>
                     </Blazored.TextEditor.BlazoredTextEditor>
                 </div>
-            </div>
-            <div class="col-1">
-                <span>
-                    @(string.IsNullOrWhiteSpace(UpdateItemDto.ItemDescriptionTitle) ? 60 : (MaxTextCount - UpdateItemDto.ItemDescriptionTitle.Count()))/@MaxTextCount
-                </span>
             </div>
         </div>
       @*   <div class="row">
