#PK-408 Domain Validation in Tenant Management

--- a/src/Kooco.Pikachu.Blazor/Pages/TenantManagement/CustomTenantManagement.razor
+++ b/src/Kooco.Pikachu.Blazor/Pages/TenantManagement/CustomTenantManagement.razor
@@ -247,7 +247,7 @@
                             <TextEdit @bind-Text="@TenantContactEmail"></TextEdit>
                         </Field>
                         <Field>
-                            <FieldLabel>@_L["Domain"]</FieldLabel>
+                            <FieldLabel>@_L["Domain"] *</FieldLabel>
                             <TextEdit @bind-Text="@Domain"></TextEdit>
                         </Field>
                         <Field>
@@ -465,7 +465,7 @@
                             <TextEdit @bind-Text="@TenantContactEmail"></TextEdit>
                         </Field>
                         <Field>
-                            <FieldLabel>@_L["Domain"]</FieldLabel>
+                            <FieldLabel>@_L["Domain"] *</FieldLabel>
                             <TextEdit @bind-Text="@Domain"></TextEdit>
                         </Field>
                         <Field>
