--- a/src/Kooco.Pikachu.Blazor/Pages/GroupBuyManagement/EditGroupBuy.razor
+++ b/src/Kooco.Pikachu.Blazor/Pages/GroupBuyManagement/EditGroupBuy.razor
@@ -169,6 +169,7 @@
             <div class="col-10">
                 <Field>
                     <FilePicker @ref="LogoPickerCustom"
+                        FilePickerLocalizer="(key,args)=>LocalizeFilePicker(key,args)"
                                 Changed="OnLogoUploadAsync"
                                 ShowMode="FilePickerShowMode.List"
                                 Accept=".jpg, .png, .svg,.jpeg,.webp">
