--- a/src/Kooco.Pikachu.Blazor/Pages/ItemManagement/EditItem.razor
+++ b/src/Kooco.Pikachu.Blazor/Pages/ItemManagement/EditItem.razor
@@ -54,6 +54,7 @@
             <div class="col-10">
                 <Field>
                     <FilePicker @ref="FilePickerCustom"
+                           FilePickerLocalizer="(key,args)=>LocalizeFilePicker(key,args)"
                                 Multiple
                                 Changed="OnFileUploadAsync"
                                 ShowMode="FilePickerShowMode.List"
