--- a/src/Kooco.Pikachu.Blazor/Pages/DeliveryTemperatureCosts/DeliveryTemperatureCost.razor
+++ b/src/Kooco.Pikachu.Blazor/Pages/DeliveryTemperatureCosts/DeliveryTemperatureCost.razor
@@ -145,14 +145,14 @@
                         </Select>
                     </Div>
                 }
-                <Div Class="col-1 text-lg-end costLabel">
+                @* <Div Class="col-1 text-lg-end costLabel">
                     <Label>@L["Cost"]</Label>
                 </Div>
                 <Div Class="col-2 costNumeric">
                     <NumericEdit TValue="decimal" 
                                  @bind-Value="item.Cost" 
                                  Class="form-control-sm" />
-                </Div>
+                </Div> *@
             </Div>
 
             Index++;
